--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+dist: xenial
+language: minimal
+#addons:
+#  chrome: stable
+
 services:
   - docker
 
@@ -13,3 +18,7 @@ script:
   - docker inspect --type=image noaho/couchpotato
   - sleep 60 # Wait for couchpotato to finish starting up.
   - docker logs couchpotato
+  # Test web port is accessible.
+#https://docs.travis-ci.com/user/gui-and-headless-browsers/
+  #- google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+# Set up weekly cron jobs to test
