--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 dist: xenial
-language: minimal
 #addons:
 #  chrome: stable
 
 services:
   - docker
+
+language: minimal
 
 before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -13,6 +14,7 @@ before_install:
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
 script:
+  - env #Show environment variables
   - docker build -t noaho/couchpotato .
   - docker run --name couchpotato -d -p 5050:5050 noaho/couchpotato
   - docker inspect --type=image noaho/couchpotato
@@ -20,5 +22,7 @@ script:
   - docker logs couchpotato
   # Test web port is accessible.
 #https://docs.travis-ci.com/user/gui-and-headless-browsers/
-  #- google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+#- google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 # Set up weekly cron jobs to test
+
+# Set up notifications via email or phone on failed builds.
