--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ before_install:
 
 script:
   - env #Show environment variables
-  - docker build -t noaho/couchpotato .
-  - docker run --name couchpotato -d -p 5050:5050 noaho/couchpotato
-  - docker inspect --type=image noaho/couchpotato
-  - sleep 60 # Wait for couchpotato to finish starting up.
-  - docker logs couchpotato
+  - docker build -t $TRAVIS_REPO_SLUG .
+  - docker run --name $TRAVIS_REPO_SLUG -d -p 5050:5050 $TRAVIS_REPO_SLUG
+  - docker inspect --type=image $TRAVIS_REPO_SLUG
+  - sleep 60 # Wait for server to finish starting up.
+  - docker logs $TRAVIS_REPO_SLUG
   # Test web port is accessible.
 #https://docs.travis-ci.com/user/gui-and-headless-browsers/
 #- google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
