--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,12 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
+stages:
+  - build
+  - test
+  - name: deploy
+    if: tag IS present
+
 jobs:
   include:
     - stage: build
