--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,11 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
-stages:
-  - name: deploy
-    if: tag IS present
-
-jobs:
-  include:
-      script:
-      name: "Docker build"
-        - docker build -t ${SLUG} .
-        - docker inspect --type=image ${SLUG}
-      name: "Tests"
-        - docker run --name ${SLUG/!(\/)\/} -d -p 5050:5050 ${SLUG}
-        - sleep 60 # Wait for server to finish starting up.
-        - docker logs ${SLUG/!(\/)\/}
+script:
+    - name: "Docker build"
+      - docker build -t ${SLUG} .
+      - docker inspect --type=image ${SLUG}
+    - name: "Tests"
+      - docker run --name ${SLUG/!(\/)\/} -d -p 5050:5050 ${SLUG}
+      - sleep 60 # Wait for server to finish starting up.
+      - docker logs ${SLUG/!(\/)\/}
